--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
             </div>
             <div class="row mt-5">
                 <div class="col-4">
+                    <img style="width: 100px; border-radius: 20px;" src="./images/lista.png" alt=""><br>
+                    <a href="./mini-pages/lista_peliculas.html">Lista de pelidulas</a>
+                </div>
+                <div class="col-4">
                     <img style="width: 100px; border-radius: 20px;" src="./images/excel.png" alt=""><br>
                     <a href="./mini-pages/horas de servicio/index.html">Horas de servicio</a>
                 </div>
                 <div class="col-4">
                     <img style="width: 100px; border-radius: 20px;" src="./images/JSON.png" alt=""><br>
                     <a href="./prophets/prophets.html">Profetas</a>
-                </div>
-                <div class="col-4">
-                    <img style="width: 100px; border-radius: 20px;" src="./images/JSON.png" alt=""><br>
-                    <a href="./mini-pages/leer_nombres.html">Lista de nombres</a>
                 </div>
                 
             </div>
