correccion ortografica 30/08/2022 10:10am

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div>
                 <h4>Hobbies</h4>
-                <p>En mis tiempos liblres me gusta tocar guitarra, hacer algo de  reposteria, carpineria, leer algun libro y sobre todo, pasar tiempo con mi esposa y mis hijos</p>
+                <p>En mis tiempos liblres me gusta tocar guitarra, hacer algo de  reposteria, carpinteria, leer algun libro y sobre todo, pasar tiempo con mi esposa y mis hijos</p>
             </div>
         </section>
     
