Correcciones ortograficas del contenidop de la pagina 30/08/2022 21:00hrs

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                         <p>Diseñador, Desarrollador, Creador</p>
                         <h1 id="webdev-h1">Desarrollador Web <br> <span>Freelance</span></h1>
                         <h4>HTML</h4>
-                        <p>Uso de HTML 5, HTML semantico (uso/manejo de  las etiquetas apropiadas segun las secciones), estructuracion de HTML pensada en paginas rensponsive</p>
+                        <p>Uso de HTML 5, HTML semántico (uso/manejo de  las etiquetas apropiadas según las secciones), estructuración de HTML pensada en páginas rensponsive</p>
                         <h4>CSS</h4>
                         <h6>Bootstrap 5:</h6> 
-                        <p>manipulacion de grid y flex, Uso de componentes en bootstrap (alerts, buttons, card, carousel),formularios, tables</p>
+                        <p>Manipulación de grid y flex, Uso de componentes en bootstrap (alerts, buttons, card, carousel),formularios, tables</p>
                         <h6>Responsive design:</h6>
-                        <p>grid y flex, imagenes responsivas, pseudo elementos y pseudo clases, variables en css</p>
+                        <p>Grid y flex, imagenes responsivas, pseudo elementos y pseudo clases, variables en css</p>
                         <h4>JS</h4>
-                        <p>manejo de ciclos, ciclos anidados, condicicionales, manipulacion de arrays y objetos, manejo del DOM, manipulacion de eventos del DOM, manejo de funciones (funciones declarativas, funciones anonimas, funciones flecha), estamos viendo creacion y manipulacion de JSON, consumo de API REST</p>
+                        <p>Manejo de ciclos, ciclos anidados, condicicionales, manipulación de arrays y objetos, manejo del DOM, manipulación de eventos del DOM, manejo de funciones (funciones declarativas, funciones anónimas, funciones flecha), estamos viendo creacion y manipulación de JSON, consumo de API REST</p>
                             
                         <a class="btn btn-outline-info w-25 m-auto" href="#sec-mi-portafolio">Mi Portafonio</a>
                 </div>
@@ -60,7 +60,7 @@
         <!-- MI PORTAFOLIO -->
         <div id="sec-mi-portafolio" class="d-flex flex-column text-center py-4" style="background-color: #eaeff4;">
             <h2>Mi portafolio</h2>
-            <p style="margin: 0 auto; padding-top: 10; padding-bottom: 50px;">Estos son algunos ejemplo de aplicacion del conociumeintop arriba descrito
+            <p style="margin: 0 auto; padding-top: 10; padding-bottom: 50px;">Estos son algunos ejemplos de aplicación del conocimiento arriba descrito
             </p>
             <div class="row">
                 <div class="col-4">
@@ -79,7 +79,7 @@
             <div class="row mt-5">
                 <div class="col-4">
                     <img style="width: 100px; border-radius: 20px;" src="./images/lista.png" alt=""><br>
-                    <a href="./mini-pages/lista_peliculas.html">Lista de pelidulas</a>
+                    <a href="./mini-pages/lista_peliculas.html">Lista de películas</a>
                 </div>
                 <div class="col-4">
                     <img style="width: 100px; border-radius: 20px;" src="./images/excel.png" alt=""><br>
@@ -99,7 +99,7 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th colspan="2">Formacion Academica</th>
+                        <th colspan="2">Formación Académica</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -116,7 +116,7 @@
                     </tr>
                     <tr>
                         <td>2008-2009</td>
-                        <td>Soporte técnico a equipos de emisión de licencias de conducir de transito  del estado de Oaxaca</td>
+                        <td>Soporte técnico a equipos de emisión de licencias de conducir de tránsito del estado de Oaxaca</td>
                     </tr>
                     <tr>
                         <td>2012 - </td>
@@ -139,16 +139,16 @@
                 <h4>Habilidades</h4>
                 <ul class="list-group">
                     <li class="list-group-item">Liderazgo</li>
-                    <li class="list-group-item">Planificacion y gestion del tiempo</del></li>
+                    <li class="list-group-item">Planificación y gestión del tiempo</del></li>
                     <li class="list-group-item">Flexibilidad</li>
-                    <li class="list-group-item">Negociacion</li>
-                    <li class="list-group-item">Aprendizaje rapido</li>
-                    <li class="list-group-item">Ingles (hablado:95% Escrito:85%)</li>
+                    <li class="list-group-item">Negociación</li>
+                    <li class="list-group-item">Aprendizaje rápido</li>
+                    <li class="list-group-item">Inglés (hablado:95% Escrito:85%)</li>
                 </ul>
             </div>
             <div>
                 <h4>Hobbies</h4>
-                <p>En mis tiempos liblres me gusta tocar guitarra, hacer algo de  reposteria, carpinteria, leer algun libro y sobre todo, pasar tiempo con mi esposa y mis hijos</p>
+                <p>En mis tiempos libres me gusta tocar guitarra, hacer algo de reposteria, carpinteria, leer algun libro y sobre todo, pasar tiempo con mi esposa y mis hijos.</p>
             </div>
         </section>
     
